fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1053,7 +1053,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 			html, body {
 			width: 100%;
-			height: 100%;
+			height: auto;
 			margin: 0;
 			padding: 0;
 		}
